--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -150,6 +150,8 @@ body {
     <img src="RentInLex-1.png" alt="RentInLex-1.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
 </div>
 
+<h4><a href="RentInLex.pdf">Download (PDF)</a></h4>
+
 <h2>Weimar Republic Elections</h2>
 <h3>Dr. Hamilton, HIS 499 Spring 2024</h3>
 
@@ -160,6 +162,8 @@ body {
 <h4><a href="Reichstag_Pro_Jahr.gif">Download</a></h4>
 
 <div class="footer">
+    <h4>School Email: hjha230@uky.edu</h4>
+    <h4>Email: hayden.hancock.813@gmail.com</h4>
 </div>
 
 </body>
