--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wolf Creek Dam Project</title>
+    <title>Hayden Portfolio</title>
     
 <style>  
 body {
