--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -7,7 +7,7 @@
     
 <style>  
 body {
-    font-family: 'Gill Sans', sans-serif;
+    font-family: Georgia, serif;
     background-color: #111e2e;
     color: #f8efd7;
     margin-right: 10%;
@@ -21,7 +21,7 @@ body {
     background-position: center center; 
     border-radius: 5px;
     color: #eceada;
-    font-family: 'Gill Sans', sans-serif;
+    font-family: Georgia, serif;
     box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
     text-align: center;
     padding: 10px;
@@ -30,13 +30,13 @@ body {
 .header-image h1 {
     font-size: 2.5em;
     text-shadow: 2px 2px 4px #000000;
-    font-family: 'Gill Sans', sans-serif;
+    font-family: Georgia, serif;
 }
 
 .subtitle {
     font-size: 1.2em;
     text-shadow: 2px 2px 4px #000000;
-    font-family: 'Gill Sans', sans-serif;
+    font-family: Georgia, serif;
 }
 	    
 .content-section {
@@ -45,7 +45,7 @@ body {
     justify-content: center;
     gap: 20px;
     padding: 20px;
-    font-family: 'Gill Sans', sans-serif;
+    font-family: Georgia, serif;
 }
 
 .content-section img {
@@ -64,7 +64,7 @@ body {
 
 .text-content h2 {
     color: #eceada;
-    font-family: 'Gill Sans', sans-serif;
+    font-family: Georgia, serif;
 }
 
 .big-image img {
@@ -79,7 +79,7 @@ body {
 .footer {
     background-color: #282829;
     color: #d2d0d0;
-    font-family: 'Gill Sans', sans-serif;
+    font-family: Georgia, serif;
     text-align: center;
     padding: 5px;
     border-radius: 5px;
