--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -141,6 +141,8 @@ body {
 
 <iframe src="https://haydenjhanc.github.io/GEO409Final/WolfCreekDam.html" width="1200" height="675" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
 
+<h4><a href="https://haydenjhanc.github.io/GEO409Final/WolfCreekDam.html">Visit Original Website</a></h4>
+
 <div class="content-section">
 	<div class="text-content">
 		<h2>Urban Development and Rent in Lexington, KY</h2>
