--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -67,6 +67,27 @@ body {
     font-family: Georgia, serif;
 }
 
+a:link 
+{
+  color: #ffbb00;
+  background-color: transparent;
+  text-decoration: underline;
+}
+	
+a:visited 
+{
+  color: #8a6500;
+  background-color: transparent;
+  text-decoration: underline;
+}
+	
+a:hover 
+{
+  color: #ffdd80;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
 .big-image img {
     width: 90%;
     display: block;
@@ -158,10 +179,10 @@ body {
 <h3>Dr. Hamilton, HIS 499 Spring 2024</h3>
 
 <div class="big-image">
-    <img src="Reichstag_Pro_Jahr.gif" alt="Reichstag_Pro_Jahr.gif">
+    <img src="Elections.gif" alt="Reichstag_Pro_Jahr.gif">
 </div>
 
-<h4><a href="Reichstag_Pro_Jahr.gif">Download</a></h4>
+<h4><a href="Elections.gif">Download</a></h4>
 
 <div class="footer">
     <h4>School Email: hjha230@uky.edu</h4>
