--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -113,6 +113,8 @@ a:hover
 <div class="header-image">
     <h1>Hayden Hancock</h1>
     <p class="subtitle">University of Kentucky, Class of 2025</p>
+	<p>School Email: hjha230@uky.edu</p>
+    <p>Email: hayden.hancock.813@gmail.com</p>
 </div>
 
 <h1>Portfolio in Chronological Order</h1>
@@ -183,11 +185,6 @@ a:hover
 </div>
 
 <h4><a href="Elections.gif">Download</a></h4>
-
-<div class="footer">
-    <h4>School Email: hjha230@uky.edu</h4>
-    <h4>Email: hayden.hancock.813@gmail.com</h4>
-</div>
 
 </body>
 </html>
