--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -162,7 +162,7 @@ a:hover
 <h2>Wolf Creek Dam</h2>
 <h3>Boyd Shearer, GEO 409 (Advanced GIS) Spring 2024</h3>
 
-<iframe src="https://haydenjhanc.github.io/GEO409Final/WolfCreekDam.html" width="1200" height="675" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
+<iframe src="https://haydenjhanc.github.io/GEO409Final/WolfCreekDam.html" width="100%" height="700" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
 
 <h4><a href="https://haydenjhanc.github.io/GEO409Final/WolfCreekDam.html">Visit Original Website</a></h4>
 
