--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -181,10 +181,10 @@ a:hover
 <h3>Dr. Hamilton, HIS 499 Spring 2024</h3>
 
 <div class="big-image">
-    <img src="Elections_.gif" alt="Elections_.gif">
+    <img src="Elections_3.gif" alt="Elections_3.gif">
 </div>
 
-<h4><a href="Elections_.gif">Download</a></h4>
+<h4><a href="Elections_3.gif">Download</a></h4>
 
 </body>
 </html>
