--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -140,7 +140,7 @@ a:hover
 <h4><a href="Bivaraiate_309_1(1).png">Download</a></h4>
 
 <div class="content-section">
-    <img src="Tracking_Urban Development_in_the_D.P.R.K..png" alt="Tracking_Urban Development_in_the_D.P.R.K..png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
+    <img src="Tracking_Urban Development_in_the_D.P.R.K.(3).png" alt="Tracking_Urban Development_in_the_D.P.R.K.(3).png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
 	<div class="text-content">
 		<h2>Tracking Urban Development in the D.P.R. Korea</h2>
         <h3>Dr. Liang, GEO 419 (Introduction to Remote Sensing) Spring 2023</h3>
