--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -148,7 +148,7 @@ a:hover
 	</div>
 </div>
 
-<h4><a href="Tracking_Urban Development_in_the_D.P.R.K..png">Download</a></h4>
+<h4><a href="Tracking Urban Development in the D.P.R.K.(3).png">Download</a></h4>
 
 <h2>The Second Battle of Lexington</h2>
 <h3>Documenting Racial Violence in Kentucky (Internship), Fall 2023</h3>
