--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -183,8 +183,21 @@ a:hover
 <div class="big-image">
     <img src="Elections_3.gif" alt="Elections_3.gif">
 </div>
-
+	
 <h4><a href="Elections_3.gif">Download</a></h4>
+
+v0f0qb1uoozc1.png
+
+<div class="content-section">
+    <img src="v0f0qb1uoozc1.png" alt="v0f0qb1uoozc1.png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
+	<div class="text-content">
+	<h2>The New California Republic, 2280 </h2>
+        <h3>Summer 2024</h3>
+	<p>This is a miscalanious side project based on a faction from the video game series "Fallout".</p>
+	</div>
+</div>
+
+<h4><a href="v0f0qb1uoozc1.png">Download</a></h4>
 
 </body>
 </html>
