--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -193,7 +193,7 @@ v0f0qb1uoozc1.png
 	<div class="text-content">
 	<h2>The New California Republic, 2280 </h2>
         <h3>Summer 2024</h3>
-	<p>This is a miscalanious side project based on a faction from the video game series "Fallout".</p>
+	<p>This is a miscellaneous side project based on a faction from the video game series "Fallout".</p>
 	</div>
 </div>
 
