--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -121,6 +121,7 @@ a:hover
 
 <h2>Hancock Farms Map (Censored)</h2>
 <h3>Dr. Zook, GEO 109 (Digital Mapping) Fall 2022</h3>
+<p>This was the first major GIS project I ever worked on. Given that the assignment was due near Christmas, I thought I could make a map of our family as a Christmas present for my parents. The map has street names and other identifying information censored for obvious reasons. This project was very simple, I just traced the Google Earth base layer and imported the topography Shapefile from the USGS website.</p>
 
 <div class="big-image">
     <img src="Hancock_Farms_Censored.png" alt="WCDUS127.png">
@@ -130,9 +131,9 @@ a:hover
 
 <div class="content-section">
 	<div class="text-content">
-		<h2>Bivariate Analysis of Crop Yield</h2>
+	<h2>Bivariate Analysis of Crop Yield</h2>
         <h3>Dr. Liang, GEO 309 (Introduction to GIS) Spring 2023</h3>
-		<p></p>
+	<p>For this project, I wanted to go beyond making a simple map and explore using GIS for analysis. I used ArcGIS to overlay the data my family's farm has on yield and moisture in fields during harvest, and overlaid it on publicly accessible factors like elevation and soil to see what factions could be attributed to good/poor yield. This concept will be expanded on in my GEO 560 Independent Study.</p>
 	</div>
     <img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
 </div>
@@ -144,7 +145,7 @@ a:hover
 	<div class="text-content">
 		<h2>Tracking Urban Development in the D.P.R. Korea</h2>
         <h3>Dr. Liang, GEO 419 (Introduction to Remote Sensing) Spring 2023</h3>
-		<p></p>
+		<p>GEO 419 was all about remote sensing. An interesting aspect of remote sensing is that it allows us to collect data on areas where data would otherwise be unacceptable, such as the world's most authoritarian and reclusive regime, North Korea. I'm very happy with the results of this project, as the measurements for Chongjin line up almost perfectly with UN Population estimates, and you can even see how the famine in the 1990s affected the development of Hamhung. </p>
 	</div>
 </div>
 
@@ -152,6 +153,7 @@ a:hover
 
 <h2>The Second Battle of Lexington</h2>
 <h3>Documenting Racial Violence in Kentucky (Internship), Fall 2023</h3>
+<p>This internship tasked us with documenting instances of racial violence in Kentucky. While this was usually a case-by-case, person-to-person basis, in this project I got to track a larger incident that was a walk away from the UK campus. I got experience making a map based off an image, which I had to georefrence and trace (in this case, Sanborn Maps) as well as looking at multiple sources to see where certain things were (for example, the Tobacco Warehouse).</p>
 
 <div class="big-image">
     <img src="Lexington_1920(1).png" alt="Lexington_1920(1).png">
@@ -161,6 +163,7 @@ a:hover
 
 <h2>Wolf Creek Dam</h2>
 <h3>Boyd Shearer, GEO 409 (Advanced GIS) Spring 2024</h3>
+<p>GEO 409 focused mostly on LiDAR and using ArcPy. CS 316 (Web Programming), which I was taking in the same semester as GEO 409, allowed me to format the final project page with HTML and CSS. This project focus a lot on how to make several different services work with your GIS data (Cesium Ion, Potree, etc.) and how to make this data accessible and understandable to the general population.</p>
 
 <iframe src="https://haydenjhanc.github.io/GEO409Final/WolfCreekDam.html" width="100%" height="700" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
 
@@ -170,7 +173,7 @@ a:hover
 	<div class="text-content">
 		<h2>Urban Development and Rent in Lexington, KY</h2>
         <h3>Mapshop (Internship) Spring 2024</h3>
-		<p></p>
+		<p>In the Mapshop project, we were analyzing the change of rent prices between the US census tracts in Fayette County (Lexington, KY). Using some of the skills I learned in GEO 409, I focused on an aspect of the project that analyzed if urban development effected prices using changes in land cover and LiDAR height. </p>
 	</div>
     <img src="RentInLex-1.png" alt="RentInLex-1.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
 </div>
@@ -179,6 +182,7 @@ a:hover
 
 <h2>Weimar Republic Elections</h2>
 <h3>Dr. Hamilton, HIS 499 Spring 2024</h3>
+<p>Th capstone paper for my History major was about analyzing the popularity of the KPD in the short-lived German (Weimar) republic. For this, I collected the data for each parties' <i>Wahlkreise</i> vote in each <i>Reichstag</i> election in a speadsheet and mapped them out, creating this informative graphic. </p>
 
 <div class="big-image">
     <img src="Elections_3.gif" alt="Elections_3.gif">
@@ -187,15 +191,15 @@ a:hover
 <h4><a href="Elections_3.gif">Download</a></h4>
 
 <div class="content-section">
-    <img src="v0f0qb1uoozc1.png" alt="v0f0qb1uoozc1.png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
+    <img src="26ejr2866wzc1.png" alt="26ejr2866wzc1.png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
 	<div class="text-content">
 	<h2>The New California Republic, 2280 </h2>
         <h3>Summer 2024</h3>
-	<p>This is a miscellaneous side project based on a faction from the video game series "Fallout".</p>
+	<p>After the Spring 2024 semester ended, I created this map for fun. It's a map of the New California Republic, a faction vying for control in a post-apocalyptic America in the video game series <i>Fallout</i>. Even though the lore is fake, I still found this project to provide some useful experience in synthesizing sometimes conflicting information to find where places are geographically.</p>
 	</div>
 </div>
 
-<h4><a href="v0f0qb1uoozc1.png">Download</a></h4>
+<h4><a href="26ejr2866wzc1.png">Download</a></h4>
 
 </body>
 </html>
