--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -209,7 +209,7 @@ a:hover
 	</div>
 	<img src="1000103925.jpg" alt="1000103925.jpg" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
 </div>	
-<h4><a href="1000103925.jpg">Download</a></h4>
+<h4><a href="KillarneyNP_.pdf">Download (GeoRef PDF)</a></h4>
 
 </body>
 </html>
