--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -219,5 +219,14 @@ a:hover
 
 <h4><a href="https://arcg.is/0jK1XX0">Visit Original Website</a></h4>
 
+<div class="content-section">
+	<div class="text-content">
+		<h2>The Cumberland Mountains of Kentucky</h2>
+        <h3>SUmmer 2024</h3>
+		<p></p>
+	</div>
+    <img src="KCM.png" alt="KCM.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
+</div>
+
 </body>
 </html>
