--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -205,7 +205,7 @@ a:hover
 	<div class="text-content">
 	<h2><i>Páirc Náisiúnta Chill Airne</i> (Killarney National Park)</h2>
         <h3>Summer 2024</h3>
-	<p></p>
+	<p>In anticipation of my upcoming trip to Ireland, I made a map of one of my planned destinations, Killarney National Park. I made sure to include Irish translations for most features on this map, as the Irish language is currently fighting endangermant.</p>
 	</div>
 	<img src="1000103925.jpg" alt="1000103925.jpg" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
 </div>	
@@ -213,14 +213,14 @@ a:hover
 
 <h2>"Exploring South Ireland" Storymap</h2>
 <h3>Summer 2024</h3>
-<p></p>
+<p>Made to get experience with StoryMap, just includes pictures from the trip. I was also able to GeoRefrence the map I made for Killarney to that section.</p>
 
 <iframe src="https://arcg.is/0jK1XX0" width="100%" height="700" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
 
 <h4><a href="https://arcg.is/0jK1XX0">Visit Original Website</a></h4>
 
 <div class="content-section">
-	<img src="KCM.png" alt="KCM.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
+	<img src="KCM_.png" alt="KCM_.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
 	<div class="text-content">
 		<h2>The Cumberland Mountains of Kentucky</h2>
         <h3>Summer 2024</h3>
