--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -117,6 +117,8 @@ a:hover
     <p>Email: hayden.hancock.813@gmail.com</p>
 </div>
 
+<h4><a href="Hayden Resume-1.pdf">Download Resume (PDF)</a></h4>
+
 <h1>Portfolio in Chronological Order</h1>
 
 <h2>Hancock Farms Map (Censored)</h2>
