--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -110,10 +110,13 @@ a:hover
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #f8efd7;
     color: white;
     text-align: center;
     padding: 1em 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 	
 .banner a {
