--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -110,9 +110,10 @@ a:hover
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #f8efd7;
+    background-color: #333;
     color: white;
     text-align: center;
+    padding: 1em 0;
 }
 	
 .banner a {
