--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -138,7 +138,7 @@ a:hover
     <p>Email: hayden.hancock.813@gmail.com</p>
 </div>
 
-<h4><a href="Hayden Resumé-1.pdf">Download Resume (PDF)</a></h4>
+<h4><a href="Hayden Resume-1.pdf">Download Resume (PDF)</a></h4>
 
 <div class="banner">
     <a href="#fall2022">Fall 2022</a>
@@ -154,13 +154,13 @@ a:hover
 <h3>Dr. Zook, GEO 109 (Digital Mapping) Fall 2022</h3>
 <p>This was the first major GIS project I ever worked on. Given that the assignment was due near Christmas, I thought I could make a map of our family as a Christmas present for my parents. The map has street names and other identifying information censored for obvious reasons. This project was very simple, I just traced the Google Earth base layer and imported the topography Shapefile from the USGS website.</p>
 
-<div id="fall2022" class="section" class="big-image">
+<div id="fall2022" class="big-image">
     <img src="Hancock_Farms_Censored.png" alt="WCDUS127.png">
 </div>
 
 <h4><a href="Hancock_Farms_Censored.png">Download</a></h4>
 
-<div id="spring2023" class="section" class="content-section">
+<div id="spring2023" class="content-section">
 	<div class="text-content">
 	<h2>Bivariate Analysis of Crop Yield</h2>
         <h3>Dr. Liang, GEO 309 (Introduction to GIS) Spring 2023</h3>
@@ -182,7 +182,7 @@ a:hover
 
 <h4><a href="Tracking Urban Development in the D.P.R.K.(4).png">Download</a></h4>
 
-<div id="fall2023" class="section">
+<div id="fall2023">
 	
 <h2>The Second Battle of Lexington</h2>
 <h3>Documenting Racial Violence in Kentucky (Internship), Fall 2023</h3>
@@ -194,7 +194,7 @@ a:hover
 
 <h4><a href="Lexington_1920(1).png">Download</a></h4>
 
-<div id="spring2024" class="section">
+<div id="spring2024">
 	
 <h2>Wolf Creek Dam</h2>
 <h3>Boyd Shearer, GEO 409 (Advanced GIS) Spring 2024</h3>
@@ -225,7 +225,7 @@ a:hover
 	
 <h4><a href="Elections_3.gif">Download</a></h4>
 
-<div id="summer2024" class="section" class="content-section">
+<div id="summer2024" class="content-section">
     <img src="26ejr2866wzc1.png" alt="26ejr2866wzc1.png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
 	<div class="text-content">
 	<h2>The New California Republic, 2280 </h2>
