--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -112,6 +112,7 @@ a:hover
     width: 100%;
     background-color: #111e2e;
     color: white;
+    justify-content: center;
     text-align: center;
     padding: 1em 0;
 }
