--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -107,7 +107,6 @@ a:hover
 }
 
 .banner {
-    position: fixed;
     top: 0;
     width: 100%;
     background-color: #111e2e;
@@ -137,7 +136,7 @@ a:hover
     <p>Email: hayden.hancock.813@gmail.com</p>
 </div>
 
-<h4><a href="Hayden Resume-1.pdf">Download Resume (PDF)</a></h4>
+<h4><a href="Hayden_Resume.pdf">Download Resume (PDF)</a></h4>
 
 <div class="banner">
     <a href="#fall2022">Fall 2022</a>
