--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -139,14 +139,12 @@ a:hover
 <h4><a href="Hayden_Resume.pdf">Download Resume (PDF)</a></h4>
 
 <div class="banner">
-    <a href="#fall2022">Fall 2022</a>
-    <a href="#spring2023">Spring 2023</a>
-    <a href="#fall2023">Fall 2023</a>
-    <a href="#spring2024">Spring 2024</a>
-    <a href="#summer2024">Summer 2024</a>
+    <a href="#2022">2022</a>
+    <a href="#2023">2023</a>
+    <a href="#2024">Spring 2024</a>
 </div>
 
-<div id="fall2022">
+<div id="2022">
 
 <h1>Portfolio in Chronological Order</h1>
 
@@ -158,7 +156,7 @@ a:hover
     <img src="Hancock_Farms_Censored.png" alt="WCDUS127.png">
 </div>
 
-<div id="spring2023">
+<div id="2023">
 
 <h4><a href="Hancock_Farms_Censored.png">Download</a></h4>
 
@@ -182,8 +180,6 @@ a:hover
 	</div>
 </div>
 
-<div id="fall2023">
-
 <h4><a href="Tracking Urban Development in the D.P.R.K.(4).png">Download</a></h4>
 
 <div class="content-section">
@@ -195,10 +191,9 @@ a:hover
     <img src="Lexington_1920(1).png" alt="Lexington_1920(1).png">
 </div>
 
-<div id="spring2024">
+<div id="2024">
 
 <h4><a href="Lexington_1920(1).png">Download</a></h4>
-
 
 <div class="content-section">
 	<div class="text-content">	
@@ -230,8 +225,6 @@ a:hover
 <div class="big-image">
 <img src="Elections_3.gif" alt="Elections_3.gif">
 </div>
-
-<div id="summer2024" class="section"></div>
 	
 <h4><a href="Elections_3.gif">Download</a></h4>
 
