--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -154,6 +154,8 @@ Click on year to skip to it:
 
 <div id="2022">
 
+<h1>2022</h1>
+
 <h1>Portfolio in Chronological Order</h1>
 
 <h2>Hancock Farms Map (Censored)</h2>
@@ -161,31 +163,31 @@ Click on year to skip to it:
 <p>This was the first major GIS project I ever worked on. Given that the assignment was due near Christmas, I thought I could make a map of our family as a Christmas present for my parents. The map has street names and other identifying information censored for obvious reasons. This project was very simple, I just traced the Google Earth base layer and imported the topography Shapefile from the USGS website.</p>
 
 <div class="big-image">
-    <img src="Hancock_Farms_Censored.png" alt="WCDUS127.png">
+    <img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png">
 </div>
-
-<div id="2023">
 
 <h4><a href="Hancock_Farms_Censored.png">Download</a></h4>
 
-<div class="content-section">
-	<div class="text-content">
-	<h2>Bivariate Analysis of Crop Yield</h2>
-        <h3>Dr. Liang, GEO 309 (Introduction to GIS) Spring 2023</h3>
-	<p>For this project, I wanted to go beyond making a simple map and explore using GIS for analysis. I used ArcGIS to overlay the data my family's farm has on yield and moisture in fields during harvest, and overlaid it on publicly accessible factors like elevation and soil to see what factions could be attributed to good/poor yield. This concept will be expanded on in my GEO 560 Independent Study.</p>
-	</div>
-    <img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
+<div id="2023">
+
+<h1>2023</h1>
+
+<h2>Bivariate Analysis of Crop Yield</h2>
+<h3>Dr. Liang, GEO 309 (Introduction to GIS) Spring 2023</h3>
+<p>For this project, I wanted to go beyond making a simple map and explore using GIS for analysis. I used ArcGIS to overlay the data my family's farm has on yield and moisture in fields during harvest, and overlaid it on publicly accessible factors like elevation and soil to see what factions could be attributed to good/poor yield. This concept will be expanded on in my GEO 560 Independent Study.</p>
+
+<div class="big-image">
+<img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
 </div>
 
 <h4><a href="Bivaraiate_309_1(1).png">Download</a></h4>
 
-<div class="content-section">
-    <img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
-	<div class="text-content">
-		<h2>Tracking Urban Development in the D.P.R. Korea</h2>
-        	<h3>Dr. Liang, GEO 419 (Introduction to Remote Sensing) Spring 2023</h3>
-		<p>GEO 419 was all about remote sensing. An interesting aspect of remote sensing is that it allows us to collect data on areas where data would otherwise be unacceptable, such as the world's most authoritarian and reclusive regime, North Korea. I'm very happy with the results of this project, as the measurements for Chongjin line up almost perfectly with UN Population estimates, and you can even see how the famine in the 1990s affected the development of Hamhung. </p>
-	</div>
+<h2>Tracking Urban Development in the D.P.R. Korea</h2>
+<h3>Dr. Liang, GEO 419 (Introduction to Remote Sensing) Spring 2023</h3>
+<p>GEO 419 was all about remote sensing. An interesting aspect of remote sensing is that it allows us to collect data on areas where data would otherwise be unacceptable, such as the world's most authoritarian and reclusive regime, North Korea. I'm very happy with the results of this project, as the measurements for Chongjin line up almost perfectly with UN Population estimates, and you can even see how the famine in the 1990s affected the development of Hamhung. </p>
+
+<div class="big-image">
+<img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
 </div>
 
 <h4><a href="Tracking Urban Development in the D.P.R.K.(4).png">Download</a></h4>
@@ -199,9 +201,11 @@ Click on year to skip to it:
     <img src="Lexington_1920(1).png" alt="Lexington_1920(1).png">
 </div>
 
+<h4><a href="Lexington_1920(1).png">Download</a></h4>
+		
 <div id="2024">
 
-<h4><a href="Lexington_1920(1).png">Download</a></h4>
+<h1>2024</h1>
 
 <div class="content-section">
 	<div class="text-content">	
@@ -217,9 +221,9 @@ Click on year to skip to it:
 
 <div class="content-section">
 	<div class="text-content">
-		<h2>Urban Development and Rent in Lexington, KY</h2>
+	<h2>Urban Development and Rent in Lexington, KY</h2>
         <h3>Mapshop (Internship) Spring 2024</h3>
-		<p>In the Mapshop project, we were analyzing the change of rent prices between the US census tracts in Fayette County (Lexington, KY). Using some of the skills I learned in GEO 409, I focused on an aspect of the project that analyzed if urban development effected prices using changes in land cover and LiDAR height. </p>
+	<p>In the Mapshop project, we were analyzing the change of rent prices between the US census tracts in Fayette County (Lexington, KY). Using some of the skills I learned in GEO 409, I focused on an aspect of the project that analyzed if urban development effected prices using changes in land cover and LiDAR height. </p>
 	</div>
     <img src="RentInLex-1.png" alt="RentInLex-1.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
 </div>
