--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -175,6 +175,9 @@ Click on year to skip to it:
 
 <div class="row">
   <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/HancockFarms2022.html">
+	<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" style="width:100%">
+  </a>
     <img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" style="width:100%">
   </div>
 </div>
