--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -174,11 +174,10 @@ Click on year to skip to it:
 <h1>2022</h1>
 
 <div class="row">
-  <div class="column">
+  <div class="column" title="Click Image for more Details>
   <a href="https://haydenjhanc.github.io/Portfolio/HancockFarms2022.html">
 	<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" style="width:100%">
   </a>
-    <img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" style="width:100%">
   </div>
 </div>
 
