--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -174,9 +174,9 @@ Click on year to skip to it:
 <h1>2022</h1>
 
 <div class="row">
-  <div class="column" title="Click Image for more Details>
+  <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/HancockFarms2022.html">
-	<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" style="width:100%">
+	<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" title="Click Image For More Details" style="width:100%">
   </a>
   </div>
 </div>
