--- a/HancockFarms2022.html
+++ b/HancockFarms2022.html
@@ -22,7 +22,6 @@ body {
     background-position: center center; 
     border-radius: 5px;
     color: #eceada;
-    font-family: Georgia, serif;
     box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
     text-align: center;
     padding: 10px;
@@ -31,59 +30,26 @@ body {
 .header-image h1 {
     font-size: 2.5em;
     text-shadow: 2px 2px 4px #000000;
-    font-family: Georgia, serif;
 }
 
 .subtitle {
     font-size: 1.2em;
     text-shadow: 2px 2px 4px #000000;
-    font-family: Georgia, serif;
-}
-	    
-.content-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-    font-family: Georgia, serif;
 }
 
-.content-section img {
-    max-width: 70%; 
-    height: auto;
-	object-fit: contain;
-    border-radius: 5px; 
-}
-
-.text-content {
-    flex: 1; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-}
-
-.text-content h2 {
-    color: #eceada;
-    font-family: Georgia, serif;
-}
-
-a:link 
-{
+a:link {
   color: #ffbb00;
   background-color: transparent;
   text-decoration: underline;
 }
 	
-a:visited 
-{
+a:visited {
   color: #8a6500;
   background-color: transparent;
   text-decoration: underline;
 }
 	
-a:hover 
-{
+a:hover {
   color: #ffdd80;
   background-color: transparent;
   text-decoration: underline;
@@ -93,36 +59,8 @@ a:hover
     width: 90%;
     display: block;
     margin: auto;
-    padding: 0px;
     box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
     border-radius: 5px;
-}
-
-.footer {
-    background-color: #282829;
-    color: #d2d0d0;
-    font-family: Georgia, serif;
-    text-align: center;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.banner {
-    top: 0;
-    width: 100%;
-    color: white;
-  	text-decoration: none;
-  	padding: 15px 25px;
-}
-
-.banner:hover 
-{
-  color: #ffdd80;
-  background-color: transparent;
-  text-decoration: underline;
-}
-	
-.section {
 }
 </style>
 </head>
@@ -131,7 +69,7 @@ a:hover
 <div class="header-image">
     <h1>Hayden Hancock</h1>
     <p class="subtitle">University of Kentucky, Class of 2025</p>
-	<p>School Email: hjha230@uky.edu</p>
+    <p>School Email: hjha230@uky.edu</p>
     <p>Email: hayden.hancock.813@gmail.com</p>
 </div>
 
@@ -140,7 +78,7 @@ a:hover
 <p>For this project, I wanted to go beyond making a simple map and explore using GIS for analysis. I used ArcGIS to overlay the data my family's farm has on yield and moisture in fields during harvest, and overlaid it on publicly accessible factors like elevation and soil to see what factions could be attributed to good/poor yield. This concept will be expanded on in my GEO 560 Independent Study.</p>
 
 <div class="big-image">
-<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
+<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png">
 </div>
 
 <h4><a href="Hancock_Farms_Censored.png">Download</a></h4>
