--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -155,22 +155,6 @@ a:hover
 
 <h4><a href="Hayden_Resume.pdf">Download Resume (PDF)</a></h4>
 
-Click on year to skip to it:
-
-<div class="banner">
-    <a href="#2022">2022</a>
-</div>
-
-<div class="banner">
-    <a href="#2023">2023</a>
-</div>
-
-<div class="banner">
-    <a href="#2024">2024</a>
-</div>
-
-<div id="2022">
-
 <h1>2022</h1>
 
 <div class="row">
@@ -183,38 +167,23 @@ Click on year to skip to it:
 
 <h1>2023</h1>
 
-<h2>Bivariate Analysis of Crop Yield</h2>
-<h3>Dr. Liang, GEO 309 (Introduction to GIS) Spring 2023</h3>
-<p>For this project, I wanted to go beyond making a simple map and explore using GIS for analysis. I used ArcGIS to overlay the data my family's farm has on yield and moisture in fields during harvest, and overlaid it on publicly accessible factors like elevation and soil to see what factions could be attributed to good/poor yield. This concept will be expanded on in my GEO 560 Independent Study.</p>
-
-<div class="big-image">
-<img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
+<div class="row">
+  <div class="column">
+  <a href="https://github.com/HaydenJHanc/Portfolio/blob/main/BivariateCropAnalysis.html">
+	<img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
+  <div class="column">
+  <a href="https://github.com/HaydenJHanc/Portfolio/blob/main/UrbanDevDPRK.html">
+	<img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
+  <div class="column">
+  <a href="https://github.com/HaydenJHanc/Portfolio/blob/main/LexingtonBattle.html">
+	<img src="Lexington_1920(1).png" alt="Lexington_1920(1).png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
 </div>
-
-<h4><a href="Bivaraiate_309_1(1).png">Download</a></h4>
-
-<h2>Tracking Urban Development in the D.P.R. Korea</h2>
-<h3>Dr. Liang, GEO 419 (Introduction to Remote Sensing) Spring 2023</h3>
-<p>GEO 419 was all about remote sensing. An interesting aspect of remote sensing is that it allows us to collect data on areas where data would otherwise be unacceptable, such as the world's most authoritarian and reclusive regime, North Korea. I'm very happy with the results of this project, as the measurements for Chongjin line up almost perfectly with UN Population estimates, and you can even see how the famine in the 1990s affected the development of Hamhung. </p>
-
-<div class="big-image">
-<img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
-</div>
-
-<h4><a href="Tracking Urban Development in the D.P.R.K.(4).png">Download</a></h4>
-
-<div class="content-section">
-	<div class="text-content">
-    <h2>The Second Battle of Lexington</h2>
-    <h3>Documenting Racial Violence in Kentucky (Internship), Fall 2023</h3>
-    <p>This internship tasked us with documenting instances of racial violence in Kentucky. While this was usually a case-by-case, person-to-person basis, in this project I got to track a larger incident that was a walk away from the UK campus. I got experience making a map based off an image, which I had to georefrence and trace (in this case, Sanborn Maps) as well as looking at multiple sources to see where certain things were (for example, the Tobacco Warehouse).</p>
-    <div class="big-image">
-    <img src="Lexington_1920(1).png" alt="Lexington_1920(1).png">
-</div>
-
-<h4><a href="Lexington_1920(1).png">Download</a></h4>
-		
-<div id="2024">
 
 <h1>2024</h1>
 
