--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -169,17 +169,17 @@ a:hover
 
 <div class="row">
   <div class="column">
-  <a href="https://github.com/HaydenJHanc/Portfolio/blob/main/BivariateCropAnalysis.html">
+  <a href="https://haydenjhanc.github.io/Portfolio/BivariateCropAnalysis.html">
 	<img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" title="Click Image For More Details" style="width:100%">
   </a>
   </div>
   <div class="column">
-  <a href="https://github.com/HaydenJHanc/Portfolio/blob/main/UrbanDevDPRK.html">
+  <a href="https://haydenjhanc.github.io/Portfolio/UrbanDevDPRK.html">
 	<img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" title="Click Image For More Details" style="width:100%">
   </a>
   </div>
   <div class="column">
-  <a href="https://github.com/HaydenJHanc/Portfolio/blob/main/LexingtonBattle.html">
+  <a href="https://haydenjhanc.github.io/Portfolio/LexingtonBattle.html">
 	<img src="Lexington_1920(1).png" alt="Lexington_1920(1).png" title="Click Image For More Details" style="width:100%">
   </a>
   </div>
@@ -199,49 +199,31 @@ a:hover
 
 <h4><a href="https://haydenjhanc.github.io/GEO409Final/WolfCreekDam.html">Visit Original Website</a></h4>
 
-<div class="content-section">
-	<div class="text-content">
-	<h2>Urban Development and Rent in Lexington, KY</h2>
-        <h3>Mapshop (Internship) Spring 2024</h3>
-	<p>In the Mapshop project, we were analyzing the change of rent prices between the US census tracts in Fayette County (Lexington, KY). Using some of the skills I learned in GEO 409, I focused on an aspect of the project that analyzed if urban development effected prices using changes in land cover and LiDAR height. </p>
-	</div>
-    <img src="RentInLex-1.png" alt="RentInLex-1.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
+<h2>"Exploring South Ireland" Storymap</h2>
+<h3>Summer 2024</h3>
+<p>Made to get experience with StoryMap, just includes pictures from the trip. I was also able to GeoRefrence the map I made for Killarney to that section.</p>
+
+<iframe src="https://arcg.is/0jK1XX0" width="100%" height="700" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
+
+<h4><a href="https://arcg.is/0jK1XX0">Visit Original Website</a></h4>
+
+<div class="row">
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/LexingtonRent.html">
+	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/WeimarElections.html">
+	<img src="Elections_3.gif" alt="Elections_3.gif" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
+	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
 </div>
-
-<h4><a href="RentInLex.pdf">Download (PDF)</a></h4>
-
-<h2>Weimar Republic Elections</h2>
-<h3>Dr. Hamilton, HIS 499 Spring 2024</h3>
-<p>Th capstone paper for my History major was about analyzing the popularity of the KPD in the short-lived German (Weimar) republic. For this, I collected the data for each parties' <i>Wahlkreise</i> vote in each <i>Reichstag</i> election in a speadsheet and mapped them out, creating this informative graphic. </p>
-
-<div class="big-image">
-<img src="Elections_3.gif" alt="Elections_3.gif">
-</div>
-	
-<h4><a href="Elections_3.gif">Download</a></h4>
-	
-<!--
-<div class="content-section">
-    <img src="26ejr2866wzc1.png" alt="26ejr2866wzc1.png" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
-	<div class="text-content">
-	<h2>The New California Republic, 2280 </h2>
-        <h3>Summer 2024</h3>
-	<p>After the Spring 2024 semester ended, I created this map for fun. It's a map of the New California Republic, a faction vying for control in a post-apocalyptic America in the video game series <i>Fallout</i>. Even though the lore is fake, I still found this project to provide some useful experience in synthesizing sometimes conflicting information to find where places are geographically.</p>
-	</div>
-</div>
---->
-
-<h4><a href="26ejr2866wzc1.png">Download</a></h4>
-
-<div class="content-section">
-	<div class="text-content">
-	<h2><i>Páirc Náisiúnta Chill Airne</i> (Killarney National Park)</h2>
-        <h3>Summer 2024</h3>
-	<p>In anticipation of my upcoming trip to Ireland, I made a map of one of my planned destinations, Killarney National Park. I made sure to include Irish translations for most features on this map, as the Irish language is currently fighting endangermant.</p>
-	</div>
-	<img src="1000103925.jpg" alt="1000103925.jpg" style="box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);">
-</div>	
-<h4><a href="KillarneyNP_.pdf">Download (GeoRef PDF)</a></h4>
 
 <h2>"Exploring South Ireland" Storymap</h2>
 <h3>Summer 2024</h3>
@@ -260,6 +242,15 @@ a:hover
 	</div>
 </div>
 <h4><a href="KCM.png">Download</a></h4>
+
+<h1>2024</h1>
+
+<div class="row">
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/Hokkaido.html">
+	<img src="Hokkaido.png" alt="Hokkaido.png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
 	
 </body>
 </html>
