--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -187,6 +187,28 @@ a:hover
 
 <h1>2024</h1>
 
+<div class="row">
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/LexingtonRent.html">
+	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/WeimarElections.html">
+	<img src="Elections_3.gif" alt="Elections_3.gif" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
+	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
+  </a>
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/CumberlandMts.html">
+	<img src="KCM.png" alt="KCM.png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
+</div>
+
 <div class="content-section">
 	<div class="text-content">	
     <h2>Wolf Creek Dam</h2>
@@ -207,23 +229,6 @@ a:hover
 
 <h4><a href="https://arcg.is/0jK1XX0">Visit Original Website</a></h4>
 
-<div class="row">
-  <div class="column">
-  <a href="https://haydenjhanc.github.io/Portfolio/LexingtonRent.html">
-	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Click Image For More Details" style="width:100%">
-  </a>
-  </div>
-  <div class="column">
-  <a href="https://haydenjhanc.github.io/Portfolio/WeimarElections.html">
-	<img src="Elections_3.gif" alt="Elections_3.gif" title="Click Image For More Details" style="width:100%">
-  </a>
-  </div>
-  <div class="column">
-  <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
-	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
-  </a>
-  </div>
-</div>
 
 <h2>"Exploring South Ireland" Storymap</h2>
 <h3>Summer 2024</h3>
@@ -243,7 +248,7 @@ a:hover
 </div>
 <h4><a href="KCM.png">Download</a></h4>
 
-<h1>2024</h1>
+<h1>2025</h1>
 
 <div class="row">
   <div class="column">
