--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -202,12 +202,15 @@ a:hover
   <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
 	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
   </a>
-  <div class="column">
+</div>
+
+<div class="row">
+<div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/CumberlandMts.html">
 	<img src="KCM.png" alt="KCM.png" title="Click Image For More Details" style="width:100%">
   </a>
-  </div>
 </div>
+
 
 <div class="content-section">
 	<div class="text-content">	
@@ -228,25 +231,6 @@ a:hover
 <iframe src="https://arcg.is/0jK1XX0" width="100%" height="700" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
 
 <h4><a href="https://arcg.is/0jK1XX0">Visit Original Website</a></h4>
-
-
-<h2>"Exploring South Ireland" Storymap</h2>
-<h3>Summer 2024</h3>
-<p>Made to get experience with StoryMap, just includes pictures from the trip. I was also able to GeoRefrence the map I made for Killarney to that section.</p>
-
-<iframe src="https://arcg.is/0jK1XX0" width="100%" height="700" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);"></iframe>
-
-<h4><a href="https://arcg.is/0jK1XX0">Visit Original Website</a></h4>
-
-<div class="content-section">
-	<img src="KCM_.png" alt="KCM_.png" style="box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);">
-	<div class="text-content">
-		<h2>The Cumberland Mountains of Kentucky</h2>
-        <h3>Summer 2024</h3>
-		<p></p>
-	</div>
-</div>
-<h4><a href="KCM.png">Download</a></h4>
 
 <h1>2025</h1>
 
